Mini Framework Change Log
=========================

2017-05-28 (Version 0.8.2 released.)

* 修正全局函数库中base64EncodeImage()方法的一处bug
* 重新调整了CHANGES的格式


2016-08-18 (Version 0.8.1 released.)

* 修正Db_Mysql中的一处bug


2016-08-14 (Version 0.8.0 released.)

* 改写了view的渲染方式
* 在Params里新增了getPost和getQuery两个方法


2016-08-09

* 在Params中的checkInject()里，用preg_match替换ereg


2016-08-03

* 向全局函数库中新增了pushJson()，用于输出JSON并终止程序运行
* 针对PHP 5.3.6以前可能存在注入的漏洞进行修补


2016-06-21

* 在Action类中，增加了存放Request实例的属性，供在动作中调用。


2016-06-17

* 新增Registry类，用于全局存取变量


2016-06-16

* 在View中新增getLayout()方法，用于在视图中的指定位置调入布局文件


2016-06-15

* 在Action中新增_forward()方法
* 在Request中新增setControllerName()和setActionName()方法


2016-04-29

* 新增支持Redis的缓存类库
* 新增使用Memcache或Redis缓存类库时，可通过getMemcacheObj()或getRedisObj()获取实例化对象，便于使用未封装的方法。


2016-04-28

* 向全局函数库中新增了base64EncodeImage()用于将图片转换为base64编码


2016-01-14

* Bug fix


2016-01-13 (Version 0.7.0 released.)

* 新增支持文件存取的缓存类库
* 从Cache_Abstract中移除_connect()和close()方法
* 在Cache_Abstract中，将_set()方法更名为set()
* 在Cache_Abstract中，将_get()方法更名为get()
* 在Cache_Abstract中，将_unset()方法更名为del()


2016-01-11

* 新增支持Memcache的缓存类库
* 向全局函数库中新增2个函数chgArrayKey()和getRandomString()


2016-01-10

* 新增全局函数库


2015-02-08 (Version 0.6.0 released.)

* 优化完善了Loader中的loadClass方法。
* Bug fix


2015-02-04

* Db_Abstract中新增debug方法，用法：$db->debug()->insert('tablename', array('col'=>'val'));。
* 新增数据库的异常控制。


2015-02-03

* 框架更名为Mini Framework，缩写依旧为：MF。
* Router中新增checkRoute方法。
* Bug fix.


2015-02-02 (Version 0.5.0 released.)

* Db_Mysql中新增insertAll方法。
* Exceptions中新增sendHttpStatus方法。
* 框架性能优化。


2015-02-01

* 新增Request类库。
* 框架性能优化。


2015-01-30 (Version 0.4.0 released.)

* 新增基于PDO的MySQL的类库。


2015-01-28 (Version 0.4.0 released.)

* 新增异常控制机制。


2015-01-27

* 新增处理GET和POST数据的类库。
* Bug fix.


2015-01-26 (Version 0.2.0 released.)

* 新增Rewrite路由模式。


2015-01-25 (Version 0.1.0 released.)

* The first public version.