@@ -1,0 +1,5 @@
+<?php echo $this->_layout->header;?>
+<body>
+    <?php echo $this->_layout->content;?>
+</body>
+</html>
