@@ -3,6 +3,6 @@ class Info
 {
     public function getInfo()
     {
-        return "<p>Hello World!</p>";
+        return "Hello World!";
     }
 }
