@@ -6,6 +6,7 @@
 
 define('APP_PATH',      dirname(__FILE__).'/../');
 define('SHOW_ERROR',    true);
+define('LAYOUT_ON',     true);
 
-//引入 Mini Framework 就是这么简单
+//引入 MiniFramework 就是这么简单
 require '../../Mini/Mini.php';
